<resources>
    <string name="app_name">ReLife</string>
    <string name="login">Giriş</string>
    <string name="name">Kullanıcı Adı</string>
    <string name="kullanici_adi">Kullanıcı Adı</string>
    <string name="sifre">Şifre</string>
    <string name="error_box"> </string>
    <string name="user_name">Kullanıcı Adı</string>
    <string name="user_password">Şifre</string>
    <string name="apple">apple</string>
    <string name="orange">orange</string>
    <string name="dragon">dragon</string>
    <string name="pear">pear</string>
    <string name="drop_target">drop target</string>

    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="ten">10</string>
    <string name="eleven">11</string>
    <string name="twelve">12</string>
    <string name="thirteen">13</string>
    <string name="fourteen">14</string>
    <string name="fifteen">15</string>
    <string name="sixteen">16</string>
    <string name="seventeen">17</string>
    <string name="eighteen">18</string>
    <string name="nineteen">19</string>
    <string name="twenty">20</string>
    <string name="twentyone">21</string>
    <string name="twentytwo">22</string>
    <string name="twentythree">23</string>
    <string name="twentyfour">24</string>
    <string name="custom_activity">Custom Activity</string>


</resources>
