<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:text="@string/apple"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/textapple"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_weight="1" />

    <TextView
        android:text="@string/orange"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:id="@+id/textorange"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:layout_weight="1" />

    <TextView
        android:text="@string/dragon"
        android:layout_width="match_parent"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAlignment="center"
        android:layout_height="0dp"
        android:id="@+id/textdragon"
        android:layout_weight="1" />

    <TextView
        android:text="@string/pear"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAlignment="center"
        android:id="@+id/textpear"
        android:layout_weight="1" />

    <TextView
        android:text="@string/drop_target"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textAlignment="center"
        android:id="@+id/target"
        android:layout_weight="1" />
</LinearLayout>